--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -54,8 +54,8 @@
    "metadata": {},
    "source": [
     "Which tree should be chosen to conduct alpha rarefaction? the de-novo tree or fragment insertion tree? \n",
-    "-> fragment insertion tree was chosen, as we have rather short sequences which might not bring up enough information.\n",
-    "Artifacts of both trees are visualized here:"
+    "-> fragment insertion tree was chosen, to get the completest tree possible with as much information as possible.\n",
+    "Artifacts of both trees are visualized here to have a look again:"
    ]
   },
   {
@@ -177,11 +177,12 @@
    "id": "b2f93508-2e0b-4fca-b8d7-967e4b846439",
    "metadata": {},
    "source": [
-    "Using alpha-rarefaction we can decide which rarefying threshold is best suited for our data.\n",
-    "1. downloaded metadata (somehow wasn't in my CE). if you already have it run normally, if not, remove the hashtags # in the following two cells.\n",
-    "2. visualized diversity alpha-rarefaction (--p-max-depth 10000) to find out which sequencing depth to use -> 1500. Also no difference was noticed between de novo and fragment insertion tree. at the end we used the insertion tree.\n",
-    "3. use core-metrics-phylogenetic plugin\n",
-    "4. use diversity alpha-group-significance to run some statisical tests\n",
+    "The following steps were done to end up with the alpha diversities.\n",
+    "1. The first thing I did was downloading the metadata again, as it somehow was missing in the directory file CE. If you already have the food-metadata.tsv run normally, if not, remove the hashtags # in the following two cells.\n",
+    "2. Used the `alpha-rarefaction` plugin in order to decide which rarefying threshold is best suited for our data. \n",
+    "3. Visualized the `diversity alpha-rarefaction` artifact (--p-max-depth 10000) to find out which sequencing depth should be used -> **1500** was chosen to not loose to many samples but also not loose too much diversity. Also no difference was noticed between *de novo* and *fragment insertion tree*. at the end we used the *fragment insertion tree*.\n",
+    "3. Used `core-metrics-phylogenetic` plugin and inserted 1500 for --p-sampling-depth in order to get many different core-metrics artifacts.\n",
+    "4. Used `diversity alpha-group-significance` plugin to run some statisical tests (Kruskall-Wallis)\n",
     "5. use diversity alpha-correlation to check for correlations (columns - richness of microbial community)\n",
     "6. some fun with pandas. nice poxplots"
    ]
@@ -203,7 +204,7 @@
     }
    ],
    "source": [
-    "! wget -nv -O $data_dir/food-metadata.tsv 'https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download'"
+    "#! wget -nv -O $data_dir/food-metadata.tsv 'https://polybox.ethz.ch/index.php/s/nEd4l5CWGWGEtae/download'"
    ]
   },
   {
@@ -213,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
+    "#df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
    ]
   },
   {
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "86be5dd6-363a-47aa-90fb-b0de47a11a98",
    "metadata": {
     "tags": []
@@ -283,20 +284,20 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-9wvdkr_h')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ltu11x_5')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d3bffc94-08d3-4c2b-a593-28947694ee89>"
+       "<visualization: Visualization uuid: 56a6d917-f4fa-44a8-9c5b-eb1bf1dd4340>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#denovo tree: number of samples has plateau at around 7000 for rind-type\n",
-    "#could change --p-max-depth 7000 \\\n",
+    "#could lower --p-max-depth to 10000 \\\n",
     "Visualization.load(f'{data_dir}/alpha-rarefaction_denovo.qzv')"
    ]
   },
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "e91f91a8-7208-4145-8648-5f77e637aeaf",
    "metadata": {
     "tags": []
@@ -373,13 +374,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-gipq8rve')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-k336ck6y')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 35ff3e78-8ccb-4ab7-8db9-2eaeb8af1312>"
+       "<visualization: Visualization uuid: 451f3775-a4b4-4ef5-85a2-fc702c1dceea>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,6 +389,162 @@
     "#fragment insertion tree: number of samples has plateau at around 7000 for rind-type\n",
     "#could change --p-max-depth  7000\\\n",
     "Visualization.load(f'{data_dir}/alpha-rarefaction_insertion.qzv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4bacc817-4572-445c-9bc5-4fdb6f32b53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/alpha-rarefaction_insertion_10000.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity alpha-rarefaction \\\n",
+    "    --i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "    --i-phylogeny $data_dir/sepp-tree.qza \\\n",
+    "    --p-max-depth 10000 \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv\\\n",
+    "    --o-visualization $data_dir/alpha-rarefaction_insertion_10000.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3b82e4c8-ce58-485d-97db-227c93f5c392",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-_l6fsqh3')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 18202a81-4f32-4843-b6b1-264745313dad>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/alpha-rarefaction_insertion_10000.qzv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fce1a434-7731-48cf-b00a-21f984fbaa09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/alpha-rarefaction_insertion_50000.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity alpha-rarefaction \\\n",
+    "    --i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "    --i-phylogeny $data_dir/sepp-tree.qza \\\n",
+    "    --p-max-depth 50000 \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv\\\n",
+    "    --o-visualization $data_dir/alpha-rarefaction_insertion_50000.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "31dabcb7-8e95-4b22-a47a-4f4d90f58574",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-18vadsyx')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: 05b66370-f55c-4e24-9666-796ee5c4eb2f>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/alpha-rarefaction_insertion_50000.qzv')"
    ]
   },
   {
