--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -177,7 +177,7 @@
    "id": "b2f93508-2e0b-4fca-b8d7-967e4b846439",
    "metadata": {},
    "source": [
-    "### The following steps were done to end up with the alpha diversities.\n",
+    "### The following steps were done to analyze alpha diversities.\n",
     "1. The first thing I did was downloading the metadata again, as it somehow was missing in the directory file CE. If you already have the food-metadata.tsv run normally, if not, remove the hashtags # in the following two cells.\n",
     "2. Used the `alpha-rarefaction` plugin in order to decide which rarefying threshold is best suited for our data. \n",
     "3. Visualized the `diversity alpha-rarefaction` artifact (--p-max-depth 100000) to find out which sequencing depth should be used \n",
@@ -185,8 +185,8 @@
     "4. Also tested different `diversity alpha-rarefaction` --p-max-depth to double check the chosen rarefaction depth. It was done for --p-max-depth 10000 and 50000.\n",
     "5. Used `core-metrics-phylogenetic` plugin and inserted 12000 for --p-sampling-depth in order to get many different core-metrics artifacts.\n",
     "6. Used `diversity alpha-group-significance` plugin to run some statisical tests (Kruskall-Wallis)\n",
-    "7. use diversity alpha-correlation to check for correlations (columns - richness of microbial community)\n",
-    "8. some fun with pandas. nice poxplots"
+    "7. use `diversity alpha-correlation` to check for correlations (columns - richness of microbial community)\n",
+    "8. some fun with pandas: creating a 2D plot of our data"
    ]
   },
   {
@@ -425,7 +425,7 @@
    "id": "b3aacc59-4a1c-4a4b-8860-416b899bb45f",
    "metadata": {},
    "source": [
-    "## 4)"
+    "### 4)"
    ]
   },
   {
@@ -586,6 +586,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd1d26b9-e0ef-40c8-9033-4507d8d7ce90",
+   "metadata": {},
+   "source": [
+    "### 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "59401467-6c5e-4133-a21d-8ad55f0acfd5",
    "metadata": {},
    "source": [
@@ -646,6 +654,14 @@
     "  --m-metadata-file $data_dir/food-metadata.tsv \\\n",
     "  --p-sampling-depth 12000 \\\n",
     "  --output-dir $data_dir/core-metrics-results_insertion_12000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88b15e04-34b7-466c-8815-9014df69c436",
+   "metadata": {},
+   "source": [
+    "### 6)"
    ]
   },
   {
@@ -779,12 +795,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1e560be-17a8-4fb9-b172-ee6ab05a9e7f",
+   "cell_type": "markdown",
+   "id": "f073ad0c-d239-4970-b0e3-86507086a4d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 7)"
+   ]
   },
   {
    "cell_type": "code",
@@ -923,6 +939,14 @@
    "source": [
     "I feel like this correlation thing isn't necessary....\n",
     "->> should try ANOVA q2-longitudinal? are assumptions correct tho?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6edadc08-6d1d-49b8-b3a2-d2a75e3e78b8",
+   "metadata": {},
+   "source": [
+    "### 8)"
    ]
   },
   {
