filter feature table

--- a/core_microbiota.ipynb
+++ b/core_microbiota.ipynb
@@ -441,7 +441,7 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-l2m73yi2')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-fdy5s8ms')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: 78f37bc9-1287-4d66-bc69-3969c384e827>"
@@ -500,18 +500,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef5d67c3-f3df-43ac-a7bd-9e959ef92fd9",
+   "cell_type": "markdown",
+   "id": "e8f1cfe8-3a8f-4acd-b355-e5ae2af9a049",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#df_meta = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', index_col=0)"
+    "This are the core features of all cheeses:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "1505b02a-c087-4022-b215-83bdca97d6ac",
    "metadata": {},
    "outputs": [
@@ -622,23 +620,57 @@
        "4  11938.72   47885.18  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_core = pd.read_csv(f'{data_dir}/core-features-0.700.tsv', sep ='\\t')\n",
-    "df_core"
+    "df_core_all = pd.read_csv(f'{data_dir}/core-features-0.700.tsv', sep ='\\t')\n",
+    "df_core_all"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0817abc-9fea-4dbd-8545-f6515cec0e8e",
+   "id": "a29867c4-7c79-4b6e-9003-cdbdbcc6d167",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9373b737-e571-42a3-8f63-8cceabdd9688",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c0f5786-5222-4906-841e-a7f78b7c1f2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5786ad5-c152-4d30-b2d8-cbe9505cc1a0",
+   "metadata": {},
+   "source": [
+    "Do cheeses from\n",
+    "Switzerland share this core microbiome with similar cheeses (e.g., same style/rind type) from neighboring\n",
+    "countries?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09286ad9-c1f1-43f2-879a-e4ad96e974ec",
+   "metadata": {},
+   "source": [
+    "Core microbiome from CH cheeses with natural rindtype:"
+   ]
   },
   {
    "cell_type": "code",
@@ -646,15 +678,87 @@
    "id": "c3b69153-ba76-4e00-ab86-1d76e2a16210",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "! qiime feature-table filter-samples \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--m-metadata-file\n",
+    "--p-where\n",
+    "--o-filtered-table $data_dir/"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bbbb18bb-43ec-4043-bc6d-ea7443f0c9ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usage: \u001b[94mqiime feature-table filter-samples\u001b[0m [OPTIONS]\n",
+      "\n",
+      "  Filter samples from table based on frequency and/or metadata. Any features\n",
+      "  with a frequency of zero after sample filtering will also be removed. See\n",
+      "  the filtering tutorial on https://docs.qiime2.org for additional details.\n",
+      "\n",
+      "\u001b[1mInputs\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--i-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Frequency¹ | RelativeFrequency² |\u001b[0m\n",
+      "    \u001b[32mPresenceAbsence³ | Composition⁴]\u001b[0m\n",
+      "                       The feature table from which samples should be\n",
+      "                       filtered.                                    \u001b[35m[required]\u001b[0m\n",
+      "\u001b[1mParameters\u001b[0m:\n",
+      "  \u001b[94m--p-min-frequency\u001b[0m INTEGER\n",
+      "                       The minimum total frequency that a sample must have to\n",
+      "                       be retained.                               \u001b[35m[default: 0]\u001b[0m\n",
+      "  \u001b[94m--p-max-frequency\u001b[0m INTEGER\n",
+      "                       The maximum total frequency that a sample can have to\n",
+      "                       be retained. If no value is provided this will default\n",
+      "                       to infinity (i.e., no maximum frequency filter will be\n",
+      "                       applied).                                    \u001b[35m[optional]\u001b[0m\n",
+      "  \u001b[94m--p-min-features\u001b[0m INTEGER\n",
+      "                       The minimum number of features that a sample must have\n",
+      "                       to be retained.                            \u001b[35m[default: 0]\u001b[0m\n",
+      "  \u001b[94m--p-max-features\u001b[0m INTEGER\n",
+      "                       The maximum number of features that a sample can have\n",
+      "                       to be retained. If no value is provided this will\n",
+      "                       default to infinity (i.e., no maximum feature filter\n",
+      "                       will be applied).                            \u001b[35m[optional]\u001b[0m\n",
+      "  \u001b[94m--m-metadata-file\u001b[0m METADATA...\n",
+      "    (multiple          Sample metadata used with `where` parameter when\n",
+      "     arguments will    selecting samples to retain, or with `\u001b[4mexclude-ids\u001b[0m` when\n",
+      "     be merged)        selecting samples to discard.                \u001b[35m[optional]\u001b[0m\n",
+      "  \u001b[94m--p-where\u001b[0m TEXT       SQLite WHERE clause specifying sample metadata\n",
+      "                       criteria that must be met to be included in the\n",
+      "                       filtered feature table. If not provided, all samples in\n",
+      "                       `metadata` that are also in the feature table will be\n",
+      "                       retained.                                    \u001b[35m[optional]\u001b[0m\n",
+      "  \u001b[94m--p-exclude-ids\u001b[0m / \u001b[94m--p-no-exclude-ids\u001b[0m\n",
+      "                       If true, the samples selected by `metadata` or `where`\n",
+      "                       parameters will be excluded from the filtered table\n",
+      "                       instead of being retained.             \u001b[35m[default: False]\u001b[0m\n",
+      "  \u001b[94m--p-filter-empty-features\u001b[0m / \u001b[94m--p-no-filter-empty-features\u001b[0m\n",
+      "                       If true, features which are not present in any\n",
+      "                       retained samples are dropped.           \u001b[35m[default: True]\u001b[0m\n",
+      "\u001b[1mOutputs\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--o-filtered-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Frequency¹ | RelativeFrequency²\u001b[0m\n",
+      "    \u001b[32m| PresenceAbsence³ | Composition⁴]\u001b[0m\n",
+      "                       The resulting feature table filtered by sample.\n",
+      "                                                                    \u001b[35m[required]\u001b[0m\n",
+      "\u001b[1mMiscellaneous\u001b[0m:\n",
+      "  \u001b[94m--output-dir\u001b[0m PATH    Output unspecified results to a directory\n",
+      "  \u001b[94m--verbose\u001b[0m / \u001b[94m--quiet\u001b[0m  Display verbose output to stdout and/or stderr during\n",
+      "                       execution of this action. Or silence output if\n",
+      "                       execution is successful (silence is golden).\n",
+      "  \u001b[94m--example-data\u001b[0m PATH  Write example data and exit.\n",
+      "  \u001b[94m--citations\u001b[0m          Show citations and exit.\n",
+      "  \u001b[94m--help\u001b[0m               Show this message and exit.\n"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime feature-table filter-samples --help"
+   ]
   }
  ],
  "metadata": {
