--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -179,12 +179,12 @@
    "source": [
     "### The following steps were done to analyze alpha diversities.\n",
     "1. The first thing I did was downloading the metadata again, as it somehow was missing in the directory file CE. If you already have the food-metadata.tsv run normally, if not, remove the hashtags # in the following two cells.\n",
-    "2. Used the `alpha-rarefaction` plugin in order to decide which rarefying threshold is best suited for our data. \n",
+    "2. Used the `diversity alpha-rarefaction` plugin in order to decide which rarefying threshold is best suited for our data. \n",
     "3. Visualized the `diversity alpha-rarefaction` artifact (--p-max-depth 100000) to find out which sequencing depth should be used \n",
     "    - **12000** was chosen to not loose to many samples but also not loose too much diversity. Also no big differences were noticed between *de novo* and *fragment insertion tree*. At the end we used the *fragment insertion tree*.\n",
     "4. Also tested different `diversity alpha-rarefaction` --p-max-depth to double check the chosen rarefaction depth. It was done for --p-max-depth 10000 and 50000.\n",
     "5. Used `core-metrics-phylogenetic` plugin and inserted 12000 for --p-sampling-depth in order to get many different core-metrics artifacts.\n",
-    "6. Used `diversity alpha-group-significance` plugin to run some statisical tests (Kruskall-Wallis)\n",
+    "6. Used `diversity alpha-group-significance` plugin to run some statistical tests (Kruskall-Wallis)\n",
     "7. use `diversity alpha-correlation` to check for correlations (columns - richness of microbial community)\n",
     "8. some fun with pandas: creating a 2D plot of our data"
    ]
